Add token invalidation and enhance user and info management
Introduced token invalidation upon logout and a cleanup mechanism for expired tokens. Enhanced user management with duplicate username checks during creation and updates, and refined info handling by replacing placeholder data with dynamic module-based responses. Also added integration tests for authentication flows and standardized exception handling for better error responses.